// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TotalTimeDistribution Component Render the TotalTimeDistribution Component having populated props with no errors 1`] = `
<TotalTimeDistribution
  partner="UW"
  proposals={
    Array [
      Object {
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
  semester="2017-1"
>
  <div
    className="stat-item"
  >
    <svg
      className="plot"
      height={700}
      width={700}
    />
  </div>

</TotalTimeDistribution>
`;

exports[`TotalTimeDistribution Component Render the TotalTimeDistribution Component having populated props with no errors 2`] = `
<TotalTimeDistribution
  partner="RSA"
  proposals={
    Array [
      Object {
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
  semester="2017-1"
>
  <div
    className="stat-item"
  >
    <svg
      className="plot"
      height={700}
      width={700}
    />
  </div>

</TotalTimeDistribution>
`;

exports[`TotalTimeDistribution Component Render the TotalTimeDistribution Component having unpopulated props with no errors 1`] = `
<TotalTimeDistribution
  partner=""
  proposals={Array []}
  semester=""
>
  <div
    className="stat-item"
  >
    <svg
      className="plot"
      height={700}
      width={700}
    />
  </div>

</TotalTimeDistribution>
`;
